# teste-drf

./: .env.dev  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
nginx/: nginx.conf  nginx.prod.conf
snippets/: models.py  serializers 1.py  serializers.py  urls 3.py  views 3.py  views 4.py  views 5.py  views.py
snippets/migrations/: 0001_initial.py
tegge/: asgi.py  settings.py  urls.py  wsgi.py
